fixed remember me wrapping

--- a/general/static_files/css/base.css
+++ b/general/static_files/css/base.css
@@ -140,13 +140,13 @@ a:hover {
 
 #rem-divider {
 	display:inline-block;
-	width:10px;
+	width:7px;
 }
 
 .remember-me {
 	display:inline-block;
 	position:relative;
-	width:42%;
+	width:44%;
 }
 
 .forgot-password {
